fix: remove extra spacing on nested menu option when selected #228

--- a/src/style.scss
+++ b/src/style.scss
@@ -20,6 +20,10 @@
   font-family: inherit;
   font-size: inherit;
   text-align: left;
+
+  .nestingSpacer {
+    display: none;
+  }
 }
 
 :host {
